fix bug on IOS, click on menu not collapse back

--- a/client/stylesheet/studentTalkCircleMenu.scss
+++ b/client/stylesheet/studentTalkCircleMenu.scss
@@ -11,6 +11,12 @@ $item-size: $toggler-size * 2;
 $item-color: black;
 $item-transition: .5s;
 
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+  .talktab-menu-item {
+    color:red;
+  }
+}
+
 @mixin size ($width, $height: $width) {
   width: $width;
   height: $height;
@@ -149,14 +155,6 @@ body {
   }
 
   &:active{
-
-    @for $i from 0 through $item-count - 1 {
-        .#{$tab-menu-class}:nth-child(#{$i + 1}) {
-          transform: rotate(360deg / $item-count * $i) translateX(0);
-      }
-    }
-
-    opacity: 0;
-    
+    opacity: 0.3;
   }
 }
